Intermediate commit - NativeTypeRegistration